--- a/WMC/ue02/index.html
+++ b/WMC/ue02/index.html
@@ -123,7 +123,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; 2025 Fan‑Projekt. Nicht offiziell mit der Serie verbunden.</p>
+      <p>&copy; 2025 Tatai. All rights reserved.</p>
     </div>
   </footer>
 </body>
