--- a/WMC/ue02/index.html
+++ b/WMC/ue02/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Jane Margolis — Fan‑Seite</title>
-  <link id="theme" rel="stylesheet" href="css/theme-light.css" />
+  <link id="theme" rel="stylesheet" href="css/theme-accent.css" />
   <style>
     /* GPT hat vorgeschlagen ein bisschen CSS für die gesamt website zu machen welches sich nicht mit änderung des light/dark themes ändert. */
     .container{max-width:1100px;margin:0 auto;padding:1.2rem;}
